--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'United States. Naval Reserve. Women''s Reserve -- Juvenile fiction'
 - !lcsh 'World War, 1939-1945 -- Participation, Female -- Juvenile fiction'
+- GITenberg
 title: Sally Scott of the WAVES
 url: http://www.gutenberg.org/ebooks/44813
